updated 3rd lesson

--- a/courses/3-lesson_06042016_how_make_application_flux/index.html
+++ b/courses/3-lesson_06042016_how_make_application_flux/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<!--https://github.com/romabelka/js_ru_29_03/tree/master/src - ссылка на репо-->
 
 <!--
     Реакт - это только вью, у него по умолчанию нет апи для работы с сервером и т.д.
