added basic flux

--- a/courses/3-lesson_06042016_how_make_application_flux/index.html
+++ b/courses/3-lesson_06042016_how_make_application_flux/index.html
@@ -19,6 +19,18 @@
 
 Сторы могут вызывать экшены
 
+Селект или ремув - это user Interaction, дальше нужно создать action creator (в папке AC)
+
+Далее ac должны вызывать action? которые будут вызывать диспетчер (для этого ставлю flux: npm i flux --SD) (файл dispatcher.js)
+
+После создания диспетчера надо файлы в стор положить (папка store)
+
+После создания стора, который умеет хранить и обрабатывать данные надо его подружить с диспетчиром, чтобы приходили экшены, поэтому подключаю диспетчер в стор (ArticleStore), и оттуда уже дергаю экшены
+
+Затем надо оповещать вьюхи, для этого беру npm i events --SD, подключаю events в (ArticleStore)
+
+Далее надо сообщить вьюхам о том, что что-то поменялось, для этого создаю обертку над ArticleList - ArticleListContainer, в нем делаю ререндеринг ArticleList
+
 -->
 
 
