--- a/courses/3-lesson_06042016_how_make_application_flux/index.html
+++ b/courses/3-lesson_06042016_how_make_application_flux/index.html
@@ -31,6 +31,11 @@
 
 Далее надо сообщить вьюхам о том, что что-то поменялось, для этого создаю обертку над ArticleList - ArticleListContainer, в нем делаю ререндеринг ArticleList
 
+Всегда добавляю
+removeChangeListener и componentWillUnmount
+
+Выношу переменные в constants
+
 -->
 
 
