added comments to 3rd lesson

--- a/courses/3-lesson_06042016_how_make_application_flux/index.html
+++ b/courses/3-lesson_06042016_how_make_application_flux/index.html
@@ -19,17 +19,20 @@
 
 Сторы могут вызывать экшены
 
-Селект или ремув - это user Interaction, дальше нужно создать action creator (в папке AC)
+Селект или ремув - это user Interaction, сперва делаю их, в файле article.js, тем самым реализую какую-то логику, по которой преобразуется компонент, дальше нужно создать action creator (в папке AC)
 
-Далее ac должны вызывать action? которые будут вызывать диспетчер (для этого ставлю flux: npm i flux --SD) (файл dispatcher.js)
 
-После создания диспетчера надо файлы в стор положить (папка store)
+Далее ac должны вызывать action, которые будут вызывать диспетчер (для этого ставлю flux: npm i flux --SD) (файл dispatcher.js)
+
+После создания диспетчера надо файлы в стор положить (папка store), создаю ArticleStore с логикой и index.js в /store, где инициализирую все сторы.
+
+Стор хранит все моки, поэтому в app.js меняю входные данные на articles={articleStore.getAll()}
 
 После создания стора, который умеет хранить и обрабатывать данные надо его подружить с диспетчиром, чтобы приходили экшены, поэтому подключаю диспетчер в стор (ArticleStore), и оттуда уже дергаю экшены
 
-Затем надо оповещать вьюхи, для этого беру npm i events --SD, подключаю events в (ArticleStore)
+Затем надо оповещать вьюхи, для этого беру npm i events --SD, подключаю events в (ArticleStore), добавляю эвентэмиттер, для того, чтобы связать стор с вью (добавляю его в ArticleStore.js)
 
-Далее надо сообщить вьюхам о том, что что-то поменялось, для этого создаю обертку над ArticleList - ArticleListContainer, в нем делаю ререндеринг ArticleList
+Далее надо сообщить вьюхам о том, что что-то поменялось, для этого создаю обертку над ArticleList - ArticleListContainer, в нем делаю ререндеринг ArticleList. Этот контейнер обеспечивает взаимодействие стор - вью
 
 Всегда добавляю
 removeChangeListener и componentWillUnmount
