added comments to 3rd lesson

--- a/courses/3-lesson_06042016_how_make_application_flux/index.html
+++ b/courses/3-lesson_06042016_how_make_application_flux/index.html
@@ -13,7 +13,7 @@
 
     Реакт - это архитектура
 
-    Flux - архитектурный паттерн, который использую для построения бизнес логики. Ключевая разница с MVC, MVVM, односторонний поток данных в отличие от двухстороннего.
+    Flux - архитектурный паттерн, который использую для построения бизнес логики. Ключевая разница с MVC, MVVM, односторонний поток данных в отличие от двухстороннего. Он нужен для бизнес логики - работы с данными в сторе, а реакт - это тула как отобразить вью.
 
     Состоит из Action (сущность, которая позволяет нам взаимодействовать с бизнес логикой и вообще отвечает за коммуникацию с нашим приложением, то что торчит наружу), который попадает в Dispatcher (отвечает за то как экшн попадает в стор, в каком поярдке), а тот распределяется по всем Store (структура, которая сохраняет данные, умеет их обрабатывать, реагировать на влияние извне и оповещать об этом вью), Store обновляются и сообщают об этом вью. Этот паттерн из плюсов: прозрачный, легкий дебаг, всегда можем пройтись по пунктам и спокойно отдебажить. Redux - реализация самая популярная, в старых проектах flux.
 
@@ -38,6 +38,18 @@
 removeChangeListener и componentWillUnmount
 
 Выношу переменные в constants
+
+Делаю абстрактный SimpleStore, чтобы каждый раз не писать сторы, в нем храню все что будет объеденять все сторы
+
+Есть 2 вида компонент: 1) который получает данные и как-то их отображает 2) которые привязываются к стору, как то коммуницируют с бизнес логикой. Во флаксе есть термины: глупые и умные компоненты. Умные - работают со стором, глупые - с вью. Есть компоненты типо Article, которые вроде и для вью, но дергают AC, в таких случаях прослойку с AC вынести в props (ну и прокинуть по всей цепочки в article, articleList и везде в пропсы). Когда такой проброс слишком накладно делать можно и в обычные компоненты импорить AC.
+
+Поэтому создаю папку containers, где храню умные компоненты.
+
+Затем нужно задекларировать какие пропсы можно передавать, а какие нет. Для этого существуют propTypes (применяю в ArticleList.js)
+
+Далее комменты прописываю в стор, и стор выношу в window для удобства дебага
+
+Далее в dispatcher.js делаю возможность просматривать все экшены
 
 -->
 
