updated flux to 3rd lesson

--- a/courses/3-lesson_06042016_how_make_application_flux/index.html
+++ b/courses/3-lesson_06042016_how_make_application_flux/index.html
@@ -51,6 +51,10 @@ removeChangeListener и componentWillUnmount
 
 Далее в dispatcher.js делаю возможность просматривать все экшены
 
+Далее пытаюсь научить наши сторы работать друг с другом: в stores/index.js - пробрасываю все сторы, а в simpleStore делаю методы для работы с ними
+
+Для того, чтобы достать из article комменты, делаю обертку для данных dataWrapper - которая добавляет relations между комментами и статьями.
+
 -->
 
 
