updated flux to 3rd lesson

--- a/courses/3-lesson_06042016_how_make_application_flux/index.html
+++ b/courses/3-lesson_06042016_how_make_application_flux/index.html
@@ -55,6 +55,14 @@ removeChangeListener и componentWillUnmount
 
 Для того, чтобы достать из article комменты, делаю обертку для данных dataWrapper - которая добавляет relations между комментами и статьями.
 
+Вся эта шняга, для того, чтобы сделать нормализированную работу с данными.
+
+1) Сделал user-interaction (хендлер на событие, которое юзер сгенерировал)
+2) создал action creator, который вызывается на юзер интерекшн (дергает диспетчер (dispatch))
+3) создаю диспетчер (npm i flux)
+4) создаю стор и связываю его с диспетчером
+5) Делаю контейнер для взаимодействия между компонентом и стором
+6) прикручиваю эвент эмиттер
 -->
 
 
