added remove comment functionality

--- a/courses/3-lesson_06042016_how_make_application_flux/index.html
+++ b/courses/3-lesson_06042016_how_make_application_flux/index.html
@@ -63,6 +63,9 @@ removeChangeListener и componentWillUnmount
 4) создаю стор и связываю его с диспетчером
 5) Делаю контейнер для взаимодействия между компонентом и стором
 6) прикручиваю эвент эмиттер
+
+
+Компоненты, которые общаются со стором должно быть немного и сторы нельзя использовать внутри глупых компонент.
 -->
 
 
